# FactLite

./: .gitignore  .npmignore  CHANGELOG.md  CustomJudge 开发规范.md  LICENSE  README.md  README_CN.md  SECURITY.md  aa_omniscience_eval_report.csv  demo.py  index.js  package.json  pubspec.yaml  pyproject.toml  requirements.txt  test_demo.js  test_demo.py
FactLite/: __init__.py
FactLite/core/: actions.py  config.py  logging_config.py  rule_chain.py  rules.py  verify.py
FactLite/core/web_utils/: _reranker.py  _search_utils.py  augmenter.py
lib/: factlite.dart
lib/src/: actions.dart  config.dart  rules.dart  verify.dart
src/: index.js
src/core/: actions.js  config.js  rules.js  verify.js
test/: factlite_test.dart
