[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FactLite"
version = "1.0.0"
description = "A lightweight framework for fact-checking AI-generated content"
readme = "README.md"
authors = [
    { name = "SR思锐 团队", email = "srinternet@qq.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/SRInternet-Studio/FactLite"
"Issues" = "https://github.com/SRInternet-Studio/FactLite/issues"
