[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FactLite"
version = "2.0.0a1"
description = "A lightweight framework for fact-checking AI-generated content with web-enhanced verification"
readme = "README.md"
authors = [
    { name = "SR思锐 团队", email = "srinternet@qq.com" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "ddgs>=9.13.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
reranker = [
    "sentence-transformers>=2.2.0",
]

[project.urls]
"Homepage" = "https://github.com/SRInternet-Studio/FactLite"
"Issues" = "https://github.com/SRInternet-Studio/FactLite/issues"

[tool.setuptools.packages.find]
include = ["FactLite*"] 
exclude = ["test_demo*", "examples*"]